# flac-codec

./: CHANGES.md  Cargo.toml  README.md
examples/: flac-add-cover.rs  flac-analyze.rs  flac-cat.rs  flac-export-cuesheet.rs  flac-import-cuesheet.rs  flac-info.rs  flac-play.rs  flac-resample.rs  flac-split.rs  flac-tag.rs  flac-verify.rs  flac-view-artwork.rs  flac2wav.rs  wav2flac.rs
src/: audio.rs  byteorder.rs  crc.rs  decode.rs  encode.rs  lib.rs  metadata.rs  stream.rs
src/metadata/: cuesheet.rs  mod.rs
tests/: corruption.rs  format.rs  metadata.rs  picture.rs  seek.rs
tests/data/: comment.flac  cuesheet.flac  noise.raw  noise32.raw  picture.flac  roundtrip-1-16-111.raw  roundtrip-1-16-4777.raw  roundtrip-1-24-111.raw  roundtrip-1-24-4777.raw  roundtrip-1-8-111.raw  roundtrip-1-8-4777.raw  roundtrip-2-16-111.raw  roundtrip-2-16-4777.raw  roundtrip-2-24-1.raw  roundtrip-2-24-111.raw  roundtrip-2-24-4777.raw  roundtrip-2-8-111.raw  roundtrip-2-8-4777.raw  roundtrip-4-16-1.raw  roundtrip-4-16-111.raw  roundtrip-4-16-4777.raw  roundtrip-4-24-1.raw  roundtrip-4-24-111.raw  roundtrip-4-24-4777.raw  roundtrip-4-8-1.raw  roundtrip-4-8-111.raw  roundtrip-4-8-4777.raw  roundtrip-8-16-1.raw  roundtrip-8-16-111.raw  roundtrip-8-16-4777.raw  roundtrip-8-24-1.raw  roundtrip-8-24-111.raw  roundtrip-8-24-4777.raw  roundtrip-8-8-1.raw  roundtrip-8-8-111.raw  roundtrip-8-8-4777.raw  seektable.flac  sine.flac  wasted-bits.raw
tests/data/cuesheets/: BAD-CatalogMissingNumber.cue  BAD-IndexPointsOutOfSequence-1.cue  BAD-IndexPointsOutOfSequence-2.cue  BAD-IndexPointsOutOfSequence-3.cue  BAD-IndexPointsOutOfSequence-4.cue  BAD-InvalidCatalogNumber-1.cue  BAD-InvalidCatalogNumber-2.cue  BAD-InvalidISRC-1.cue  BAD-InvalidISRC-2.cue  BAD-InvalidIndexPoint-1.cue  BAD-InvalidIndexPoint-2.cue  BAD-InvalidIndexPoint-3.cue  BAD-InvalidIndexPoint-4.cue  BAD-InvalidIndexPoint-5.cue  BAD-InvalidTrack-1.cue  BAD-InvalidTrack-2.cue  BAD-InvalidTrack-3.cue  BAD-InvalidTrack-4.cue  BAD-InvalidTrack-5.cue  BAD-InvalidTrack-6.cue  BAD-InvalidTrack-7.cue  BAD-InvalidTrack-8.cue  BAD-InvalidTrack-9.cue  BAD-LateFlags.cue  BAD-LateISRC.cue  BAD-MultipleCatalogNumber.cue  BAD-MultipleFlags.cue  BAD-MultipleISRC.cue  BAD-NoTracks.cue  BAD-NonZeroFirstIndex.cue  BAD-PrematureFlags.cue  BAD-PrematureISRC.cue  BAD-PrematureIndex.cue  BAD-TracksOutOfSequence-1.cue  OK-0.cue  OK-1.cue  (+5 more)
