[package]
name = "flac-codec"
description = "A comprehensive library for handling FLAC files"
keywords = ["flac"]
version = "0.1.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/flac-codec/"
homepage = "https://github.com/tuffy/flac-codec"
repository = "https://github.com/tuffy/flac-codec"
edition = "2024"
rust-version = "1.87"

[dependencies]
bitstream-io = "4.3"
arrayvec = "0.7"
md5 = "0.7"
# Rayon only used for FLAC encoding
rayon = { version = "1.10", optional = true }

[dev-dependencies]
fastrand = "2.3"

# For the flac-view-artwork example program
image = "0.25"
viuer = "0.9"

# For the flac-play example program
cpal = "0.16"
