[package]
name = "flac-codec"
description = "A comprehensive library for handling FLAC files"
keywords = ["flac", "audio", "lossless", "codec"]
version = "1.0.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/flac-codec/"
homepage = "https://github.com/tuffy/flac-codec"
repository = "https://github.com/tuffy/flac-codec"
edition = "2024"
rust-version = "1.88"

# For the flac-view-artwork example program
[features]
viu = ["dep:image", "dep:viuer"]

[dependencies]
bitstream-io = "4.3"
arrayvec = "0.7"
md5 = "0.7"

# Rayon only used for FLAC encoding
rayon = { version = "1.10", optional = true }

# For the flac-play example program
cpal = { version = "0.16", optional = true }

# For the flac-view-artwork example program
image = { version = "0.25", optional = true }
viuer = { version = "0.9", optional = true }

# For the flac-resample example program
rubato = { version = "0.16", optional = true }

[dev-dependencies]
fastrand = "2.3"
